--- a/website/index.html
+++ b/website/index.html
@@ -9,7 +9,7 @@
     <body>
         <header>
         <div class="logo">
-            <img width="64" src="images/LK.png" alt="logo featuring the letters L, K">
+            <img width="64" src="../assets/LK.png" alt="logo featuring the letters L, K">
         </div>
         <nav>
             <ul>
@@ -22,7 +22,7 @@
         </header>
 
         <main>
-            <section class="intro">
+            <section class="hero">
                 <h1>Software Engineer</h1>
                 <p>
                 I build things for the web.
@@ -39,7 +39,7 @@
                 </ul>
             </section>
 
-            <section class="Work Experience">
+            <section class="work-experience">
                 <h2>Work Experience</h2>
                 <article>
                     <h3>Roadmap.sh</h3>
@@ -53,7 +53,7 @@
             </article>
             </section>
 
-            <section>
+            <section class="education">
                 <h2>Education</h2>
                 <p>Studying Information Technology at Krokeide VGS, studies includes the following subjects:</p>
                 <ul>
@@ -65,18 +65,20 @@
 
             <aside class="reviews">
                 <h2>Reviews from my Peers</h2>
-                <blockquote>
-                    <p>Lukas was a chill guy, he lowkey didn't give a fuck</p>
-                    <footer>The Rizzler, Professional Angry Birds player</footer>
-                </blockquote>
-                <blockquote>
-                    <p>Lukas was always beaming, the workplace always felt welcoming with him around</p>
-                    <footer>Gog, the alien dog</footer>
-                </blockquote>
-                <blockquote>
-                    <p>Lukas was on fire. His work was always well-polished and efficient</p>
-                    <footer>Jane Doe, Professional dummy name model</footer>
-                </blockquote>
+                    <div class="feedback">
+                        <blockquote>
+                            <p>Lukas was a chill guy, he lowkey didn't give a fuck</p>
+                            <footer>The Rizzler, Professional Angry Birds player</footer>
+                        </blockquote>
+                        <blockquote>
+                            <p>Lukas was always beaming, the workplace always felt welcoming with him around</p>
+                            <footer>Gog, the alien dog</footer>
+                        </blockquote>
+                        <blockquote>
+                            <p>Lukas was on fire. His work was always well-polished and efficient</p>
+                            <footer>Jane Doe, Professional dummy name model</footer>
+                        </blockquote>
+                    </div>
             </aside>
         </main>
 
