--- a/website/projects.html
+++ b/website/projects.html
@@ -9,7 +9,7 @@
     <body>
         <header>
             <div class="logo">
-                <img width="64" src="images/LK.png" alt="Logo featuring the letters L, K">
+                <img width="64" src="../assets/LK.png" alt="Logo featuring the letters L, K">
             </div>
             <nav>
                 <ul>
